[metadata]
name = ffbio
version = 0.0.1
author = Daniel Antonio Negrón
author_email = dnegron2@gmu.edu
description = flat-file sequence/database utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dnanto/ffbio
project_urls =
    Bug Tracker = https://github.com/dnanto/ffbio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = ffbio
packages = find:
python_requires = >=3.7
install_requires = biopython>=1.78

[options.packages.find]
where = ffbio
